#
#--------------------------------------------------------------------------
#
#		CHANGE LOG FOR THE LATEX2HTML RELEASE
#
# What is recorded here are changes to any file of the LaTeX2HTML release
# *meaningful to the user*, such as new options or files, important bug
# fixes etc.
# A more detailed log history can be found within the particular files, near
# the top.
#
#
#		
#
#		- new option -use_hilite
#		- support minted package
#		- new option -unicase_titles
#
#--------- v2024
#
#		- "make clean" removes manual.pdf
#		  https://bugs.debian.org/1046413
#
#--------- v2023.2
#
#		- DONT_INCLUDE now affects \usepackage but not \input
#		- support \usepackage[xindy]{imakeidx} for sorting accents
#		- support babel main language option
#		- support hyphenat package
#
#--------- v2023
#
#		- update for latest pdftocairo
#
#--------- v2022.2
#
#		- spacing of eqnarray and align
#		- check for preview.sty in config.pl
#		- check for failure of pdflatex run
#		- newline after footnote should give space
#		- fix ref to label inside float
#		- add sidewaysfigure, sidewaystable
#		- fix eqnarray*
#
#--------- v2022
#
#		- fix cropped figures
#		- revert PreviewBorder to 0.5bp
#		- support download attribute for <A> tag
#		- remove meta tags for distribution, etc
#		- allow input filename with no extension
#		  echo hello world | latex2html -dir out -mkdir /dev/stdin
#
#--------- v2021.2
#
#		- latex2html -long_titles   fix duplicate file names
#		- latex2html -long_titles 5 -title "Title"
#		  correct link from index.html
#		- pnmquant -norandom    for reproducible builds
#		- treat cygwin as unix
#		- $WORDS_IN_INDEX configurable
#		- fix image size for multline, subequations
#		- remove extra <SPAN> after subequations
#		- equation numbering for multline
#		- close bold, etc, at end of environment
#		- implement memoir document class
#		- fix scanning of latex comments
#		- fix subequation numbering
#		- babel should not set character encoding of input file